api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"synergychat-api"},"name":"synergychat-api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"synergychat-api"}},"template":{"metadata":{"labels":{"app":"synergychat-api"}},"spec":{"containers":[{"env":[{"name":"API_PORT","valueFrom":{"configMapKeyRef":{"key":"API_PORT","name":"synergychat-api-configmap"}}}],"image":"bootdotdev/synergychat-api:latest","name":"synergychat-api [...]
  creationTimestamp: "2025-03-20T13:31:00Z"
  generation: 3
  labels:
    app: synergychat-api
  name: synergychat-api
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-api
    spec:
      containers:
      - env:
        - name: CRAWLER_BASE_URL
          valueFrom:
            configMapKeyRef:
              key: CRAWLER_BASE_URL
              name: synergychat-api-configmap
        - name: API_PORT
          valueFrom:
            configMapKeyRef:
              key: API_PORT
              name: synergychat-api-configmap
        - name: API_DB_FILEPATH
          valueFrom:
            configMapKeyRef:
              key: API_DB_FILEPATH
              name: synergychat-api-configmap
        image: bootdotdev/synergychat-api:latest
        imagePullPolicy: Always
        # volumes:
        # - name: synergychat-api-volume
        #   persistentVolumeClaim:
        #     claimName: synergychat-api-pvc
        volumeMounts:
        - name: synergychat-api-volume
          mountPath: /persist
        name: synergychat-api
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: synergychat-api-volume
        persistentVolumeClaim:
          claimName: synergychat-api-pvc
      # volumeMounts:
      # - name: synergychat-api-volume
      #   mountPath: /persist
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-03-20T14:05:19Z"
    lastUpdateTime: "2025-03-20T14:05:24Z"
    message: ReplicaSet "synergychat-api-869bfc4dc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-04-02T10:44:50Z"
    lastUpdateTime: "2025-04-02T10:44:50Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
