web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  uid: 75ab3309-d140-4575-bb22-29c763538509
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-web
    spec:
      containers:
      - env:
        - name: API_URL
          valueFrom:
            configMapKeyRef:
              key: API_URL
              name: synergychat-web-configmap
        - name: WEB_PORT
          valueFrom:
            configMapKeyRef:
              key: WEB_PORT
              name: synergychat-web-configmap
        - name: CRAWLER_BASE_URL
          valueFrom:
            configMapKeyRef:
              name: synergychat-web-configmap
              key: CRAWLER_BASE_URL
        image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
