crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service 
spec:
  selector:
    app: synergychat-crawler 
  type: ClusterIP
  ports: #An array of port objects. You need one entry:
  - protocol: TCP #(TCP will allow us to use HTTP)
    port: 80 #(this is the port that the service will listen on)
    targetPort: 8080 #(this is the port that the pods are listening on)
