web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service #(we could call it anything, but this is a fine name)
spec:
  selector:
    app: synergychat-web #I'm going to let you figure out what should be here. This is how the service knows which pods to route traffic to.
  ports: #An array of port objects. You need one entry:
  - protocol: TCP #(TCP will allow us to use HTTP)
    port: 80 #(this is the port that the service will listen on)
    targetPort: 8080 #(this is the port that the pods are listening on)
